--- a/index.html
+++ b/index.html
@@ -133,13 +133,46 @@
                         </ul>
                     </nav>
                     <!-- action -->
-                    <div class="action">
-                        <a href="#!" class="action__login">Log In</a>
-                        <button href="#!" class="btn action__sign-up">
+                    <div class="header-action">
+                        <a href="#!" class="header-action__login">Log In</a>
+                        <button href="#!" class="btn header-action__sign-up">
                             Sign Up
                         </button>
                     </div>
                 </div>
+                <!-- hero -->
+                <section class="hero">
+                    <!-- Hero__content -->
+                    <section class="hero__content">
+                        <h1 class="hero__heading">
+                            Exceptional dental care for all ages.
+                        </h1>
+                        <p class="hero__desc">
+                            Exceptional dental care for all ages. Your great
+                            smile begins with a great dentist.
+                        </p>
+                        <div class="hero__row">
+                            <a href="" class="btn hero__row--btn">
+                                Book Online
+                            </a>
+                            <p class="hero__contact">or call (123) 456-7890</p>
+                        </div>
+                    </section>
+                    <div class="hero__media">
+                        <figure class="hero__images">
+                            <img
+                                src="./assets/imgs/hero-1.jpg"
+                                alt="Exceptional dental care for all ages."
+                                class="hero__img"
+                            />
+                            <img
+                                src="./assets/imgs/hero-2.jpg"
+                                alt="Exceptional dental care for all ages."
+                                class="hero__img"
+                            />
+                        </figure>
+                    </div>
+                </section>
             </div>
         </header>
     </body>
