--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
         </header>
         <!-- main -->
         <main>
+            <!-- service -->
             <section class="service">
                 <div class="container">
                     <div class="service__heading section-heading">
@@ -282,6 +283,102 @@
                                 All Services
                             </a>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <!-- work -->
+            <section class="work">
+                <div class="container">
+                    <div class="work__top">
+                        <h2 class="section-heading">How it works</h2>
+                        <p class="section-desc">
+                            Exceptional dental care for all ages. Your great
+                            smile begins with a great dentist.
+                        </p>
+                    </div>
+                    <div class="work__list">
+                        <!-- item-1 -->
+                        <section class="work__item">
+                            <div class="work__info">
+                                <img
+                                    src="./assets/icons/search.svg"
+                                    alt="Search doctor"
+                                    class="work__icon"
+                                />
+                                <h3 class="work__heading">Search doctor</h3>
+                                <p class="work__desc">
+                                    Search a doctor by education, qualifications
+                                    or experience-contact for inquiry.
+                                </p>
+                                <a href="#!" class="work__click">Learn More</a>
+                            </div>
+                        </section>
+                        <!-- item-2 -->
+                        <section class="work__item">
+                            <div class="work__info">
+                                <img
+                                    src="./assets/icons/find-doctor.svg"
+                                    alt="Find best doctor"
+                                    class="work__icon"
+                                />
+                                <h3 class="work__heading">Find best doctor</h3>
+                                <p class="work__desc">
+                                    Search a doctor by education, qualifications
+                                    or experience-contact for inquiry.
+                                </p>
+                                <a href="#!" class="work__click">Learn More</a>
+                            </div>
+                        </section>
+                        <!-- item-3 -->
+                        <section class="work__item">
+                            <div class="work__info">
+                                <img
+                                    src="./assets/icons/bag.svg"
+                                    alt="Get treatment"
+                                    class="work__icon"
+                                />
+                                <h3 class="work__heading">Get treatment</h3>
+                                <p class="work__desc">
+                                    Search a doctor by education, qualifications
+                                    or experience-contact for inquiry.
+                                </p>
+                                <a href="#!" class="work__click">Learn More</a>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </section>
+            <!-- feature -->
+            <section class="feature">
+                <div class="container">
+                    <div class="feature__body">
+                        <div class="feature__media">
+                            <figure class="feature__image">
+                                <img
+                                    src="./assets/imgs/feature-1.svg"
+                                    alt="Take back your smile with shine."
+                                    class="feature__img"
+                                />
+                                <img
+                                    src="./assets/imgs/feature-2.svg"
+                                    alt="Take back your smile with shine."
+                                    class="feature__img--small"
+                                />
+                            </figure>
+                        </div>
+                        <section class="feature__hero">
+                            <h2 class="section-heading">
+                                Take back your smile with shine.
+                            </h2>
+                            <p class="section-desc">
+                                If you’re missing multiple teeth due to decay,
+                                injury, or the natural aging process, dentures
+                                might be the perfect solution.
+                            </p>
+                            <a href="#!" class="btn feature__hero--btn">
+                                Learn More
+                            </a>
+                        </section>
                     </div>
                 </div>
             </section>
